--- a/frontend/travel-agency-app/index.html
+++ b/frontend/travel-agency-app/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>travel-agency-app</title>
+    <title>Beyond Borders</title>
   </head>
   <body>
     <div id="root"></div>
